tests/machine/x/c/right_join.error
line: 0
error: output mismatch
-- got --
--- Right Join using syntax ---
-- want --
--- Right Join using syntax ---
Customer Alice has order 100 - $ 250
Customer Bob has order 101 - $ 125
Customer Alice has order 102 - $ 300
   1: #include <stdio.h>
